# korin-old

./: .gitmodules  CMakeLists.txt  README.md
cmake/: compiler.cmake  platform.cmake  target.cmake  version.cmake
extras/gdb/: types.py
src/: CMakeLists.txt
src/google/: CMakeLists.txt
src/korin/: CMakeLists.txt  main.cpp
src/korin/core/: CMakeLists.txt
src/korin/core/private/hal/: malloc_binned.cpp  malloc_multi_pool.cpp  malloc_pool.cpp  memory_base.cpp
src/korin/core/private/regex/: regex.cpp
src/korin/core/public/algorithm/: sort.h
src/korin/core/public/apple/: apple_platform.h
src/korin/core/public/containers/: array.h  containers_types.h  inline_list.h  list.h  map.h  pair.h  set.h  string.h  tree.h  tuple.h
src/korin/core/public/crypto/: crypto.h  crypto_types.h  crypto_utils.h  lfsr.h  uid.h
src/korin/core/public/generic/: generic_platform.h  generic_platform_atomics.h  generic_platform_math.h  generic_platform_memory.h  generic_platform_time.h
src/korin/core/public/hal/: malloc_ansi.h  malloc_multi_pool.h  malloc_object.h  malloc_pool.h  memory_base.h  platform.h  platform_atomics.h  platform_memory.h  platform_time.h
src/korin/core/public/linux/: linux_platform_atomics.h  linux_platform_math.h  linux_platform_memory.h  linux_platform_strings.h  linux_platform_time.h
src/korin/core/public/math/: mat4.h  math.h  math_types.h  perspective_matrix.h  quat.h  simd_float.h  transform_matrix.h  vec2.h  vec3.h  vec4.h
src/korin/core/public/misc/: assert.h  build.h  utility.h
src/korin/core/public/regex/: automaton.h  executor.h  regex.h  regex_types.h  state.h
src/korin/core/public/templates/: array.h  atomic.h  base.h  enable_if.h  function.h  functional.h  iterator.h  name.h  optional.h  type_info.h  types.h  unique_ptr.h  utility.h
src/korin/core/public/unix/: unix_platform.h  unix_platform_atomics.h  unix_platform_math.h  unix_platform_time.h
src/sgl/: CMakeLists.txt  main.cpp
src/sgl/core/: CMakeLists.txt
src/sgl/core/private/: main.cpp
src/sgl/core/private/hal/: malloc_ansi.cpp  malloc_binned.cpp  malloc_pool.cpp
src/sgl/core/private/math/: math.cpp
src/sgl/core/public/: core_types.h
src/sgl/core/public/containers/: array.h  containers_fwd.h  containers_types.h  list.h  map.h  pair.h  string.h  tree.h  tuple.h
src/sgl/core/public/generic/: generic_platform_math.h  generic_platform_memory.h  generic_platform_strings.h
src/sgl/core/public/hal/: malloc_binned.h  malloc_object.h  malloc_pool.h  memory_base.h  platform.h  platform_crt.h  platform_math.h  platform_strings.h
src/sgl/core/public/linux/: linux_platform.h  linux_platform_math.h  linux_platform_memory.h
src/sgl/core/public/math/: mat4.h  math.h  math_fwd.h  math_types.h  quat.h  simd.h  vec2.h  vec3.h  vec4.h
src/sgl/core/public/misc/: assert.h  utility.h
src/sgl/core/public/templates/: allocators.h  types.h  utility.h
src/sgl/core/public/unix/: unix_platform.h  unix_platform_math.h  unix_platform_memory.h  unix_platform_strings.h
test/: CMakeLists.txt  run.cpp
test/benches/: CMakeLists.txt  bench_array.cpp  bench_array.h  bench_map.cpp  bench_map.h  bench_math.cpp  bench_math.h  bench_memory.cpp  bench_memory.h  bench_regex.cpp  bench_regex.h  bench_set.cpp  bench_set.h  bench_sort.cpp  bench_sort.h  bench_string.cpp  bench_string.h  bench_util.h
test/units/: CMakeLists.txt  test_all.cpp  test_containers.cpp  test_containers.h  test_crypto.cpp  test_crypto.h  test_math.cpp  test_math.h  test_memory.cpp  test_memory.h  test_regex.cpp  test_regex.h  test_templates.cpp  test_templates.h
